# friendly-read

./: .env  Cargo.toml
app/: package-lock.json  package.json
app/src/: App.svelte  app.css  test.html
app/src/api/: index.js
app/src/assets/: pages.json
app/src/lib/: InfiniteScroll.svelte  PrivateRouteGuard.svelte
app/src/page/: Book.svelte  Home.svelte
app/src/util/: index.js
lab/src/: main.rs
src/: api.rs  client.rs  main.rs  model.rs  puller.rs
